# controll-listitem

./: .dockerignore  LICENSE  README.md  docker-compose.yml  dockerfile  env.example  makefile  manage.py  pyproject.toml  requirements.txt
controllitem/: asgi.py  settings.py  urls.py  wsgi.py
controllitem/accounts/: apps.py
controllitem/store/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
controllitem/store/fixtures/: auth.json  store.json
controllitem/store/migrations/: 0001_initial.py  0002_alter_listitem_options_alter_item_child_item.py  0003_alter_item_child_item.py  0004_alter_item_quantity.py
