[tool.poetry]
name = "controllitem"
version = "0.1.0"
description = "sytem for controle list and itens."
authors = ["Thiago Beviláqua <thiago.bevilaqua@grupomateus.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
djangorestframework = "^3.13.1"
psycopg2 = "^2.9.3"
dj-database-url = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
